# car_head_unit_rs

./: README.md  index.html  package-lock.json  package.json  todo.md
.github/workflows/: main.yml  tauri-auto-release.yml
public/settings/: settings.json
src/: App.css  App.css.bak  App.tsx  colors.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: arduino.rs  bt.rs  bt_listeners.rs  hw_control.rs  main.rs  music.rs  network.rs  settings.rs  signal_handler.rs  updater.rs
src-tauri/src/hardware/audio/: audio.rs  mod.rs  sinks.rs
src/components/: globalstatecontext.tsx  image_button.tsx  main_container.tsx  notification_bar.tsx
src/components/arduino/: arduino_dev.tsx  monitor.tsx
src/components/bluetooth/: device.tsx
src/components/dockbar/: dockbar.tsx  volumeslider.tsx
src/components/generic/: dropdown.tsx
src/components/internet_radio/: now_playing.tsx
src/components/music/: album_logo.tsx  music_controls.tsx  song_info.tsx
src/components/navigation/: webview.tsx
src/components/notification/: notification_context.tsx  notification_provider.tsx
src/components/notification_templates/: bt_device_status.tsx  normal_notif.tsx  power_menu.tsx
src/screens/: arduino_mgr.tsx  bluetooth.tsx  internet_radio.tsx  main_menu.tsx  music.tsx  navigation.tsx  radio.tsx  settings.tsx
src/styles/: Arduino.css  Bluetooth.css  MusicInfo.css  NotifTemplates.css  Notification.css  Radio.css  Settings.css
src/utils/: bluetooth.ts  constants.ts  image_utils.ts  music.ts  network.ts  settings_utils.ts  statuses.tsx  utils.tsx
(+19 files in other folders)
