[package]
name = "car_head_unit_react"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "path-all", "http-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-channel = "2.3.1"
serde_json = "1"
bt_wrapper = { git = "https://github.com/capppe/bluez_wrapper_rs.git" }
serial_rs = { git = "https://github.com/capppe/serial_rs.git" }
tauri-build = "1"
openssl-sys = { version = "0.9", features = ["vendored"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# [dependencies.bt_wrapper]
# path = "../../../rust/libs/bt_wrapper"
#
# [dependencies.serial_rs]
# path = "../../../rust/libs/serial_rs"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
